--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,3 @@
 {
-  "name": "hongmizhijia/a",
-   "repositories":[
-    {
-      "type": "git",
-      "url": "https://github.com/hongmizhijia/hello.git"
-    }
-  ],
-  "require": {
-    "hongmizhijia/hello": "dev-master"
-  }
-
+  "name": "hongmizhijia/a"
 }
