--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,4 @@
 {
-  "name": "hongmizhijia/a",
-  
-    "extra": {
-        "installer-paths": {
-            "a/{$name}": ["vendor/package"]
-        }
-    }
+  "name": "hongmizhijia/a"
 
 }
