--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
   "name": "hongmizhijia/a",
+  "repositories":[
+   {   
+            "packagist": false
+        }, 
+       {
+        "type": "git",
+        "url": "https://github.com/hongmizhijia/hello.git"
+      }
+  ],
   "require": {
         "hongmizhijia/hello": "dev-master"
     }
